# kemet-wagtail-fullstack

./: .dockerignore  .gitignore  .gitpod.yml  Dockerfile.dev  Makefile  README.md  commands.sh  docker-compose.yml  docker-gitpod.yml  gulpfile.js  package-lock.json  package.json  pyproject.toml  requirements.txt
app/: urls.py
app/home/templates/home/: home_page.html
app/settings/: base.py  dev.py
app/static/css/: app.css
app/templates/: base.html
assets/sass/: app.scss
cms/: urls.py
cms/settings/: base.py  local.example.py
cms/static/css/: app.min.css
cms/static/js/: app.js  app.min.js
docker/: .bashrc  .superuser.sh
frontend/sass/components/: _1_footer.scss  _1_header.scss
frontend/sass/custom-style/: _typography.scss
setup/: frontend.sh  package.json  wagtail.sh
